Made this css human readable. Specified rect in the css so that it doesn't stop on other things that have rect.  This is why the charts in results-summary seemed to disappear.
git-svn-id: https://redmine.hindsight.psc.edu/svn/hermes/trunk@2065 c0c85e88-7b48-49d6-ad45-a8906df79eec

--- a/HERMES2/src/ui_www/hierarchical-charts/zoomable-treemap.css
+++ b/HERMES2/src/ui_www/hierarchical-charts/zoomable-treemap.css
@@ -1,44 +1,78 @@
 #chart {
-  width: 960px;
-  height: 500px;
-  background: #ddd;
+  
+width: 960px;
+  
+height: 500px;
+  
+background: #ddd;
+
 }
+
 
 text {
-  pointer-events: none;
+  
+pointer-events: none;
+
 }
+
+
 
 .grandparent text {
-  font-weight: bold;
+  
+font-weight: bold;
+
 }
 
-rect {
-  fill: none;
-  stroke: #fff;
+
+
+rect.child {
+  
+fill: none;
+  
+stroke: "black";
+
 }
+
+
 
 rect.parent,
 .grandparent rect {
+
   stroke-width: 2px;
+  fill:none;
 }
+
 
 .grandparent rect {
-  fill: orange;
+  
+fill: orange;
+
 }
 
+
 .grandparent:hover rect {
-  fill: #ee9700;
+  
+fill: #ee9700;
+
 }
+
 
 .children rect.parent,
 .grandparent rect {
-  cursor: pointer;
+  
+cursor: pointer;
+
 }
 
+
 .children rect.parent {
+
   fill: #bbb;
-  fill-opacity: .5;
+  
+fill-opacity: .5;
+
 }
+
 
 .children:hover rect.child {
   fill: #bbb;
